--- a/engenharia-software/Patio/bin/.project
+++ b/engenharia-software/Patio/bin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>patio_bertoti</name>
+	<name>Patio</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1694476911306</id>
+			<id>1693667741442</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
